easylife-ai/easylife-ai/easylife-ai/k8s/base/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: easylife
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  tls:
    - hosts: [ grafana.easylife-ai.com ]
      secretName: grafana-tls
  rules:
    - host: grafana.easylife-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
